--- a/DBMS/src/main/java/hackbreakers/gui/MainFrame.form
+++ b/DBMS/src/main/java/hackbreakers/gui/MainFrame.form
@@ -63,7 +63,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="My Database"/>
+    <Property name="title" type="java.lang.String" value="DBMS 1.0"/>
     <Property name="bounds" type="java.awt.Rectangle" editor="org.netbeans.beaninfo.editors.RectangleEditor">
       <Rectangle value="[0, 0, 0, 0]"/>
     </Property>
